<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/layout_style"
    tools:context=".MemsAddActivity">


    <android.support.constraint.ConstraintLayout
        style="@style/main_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/circal_acc"
            android:backgroundTint="@color/colorAccent"
            android:elevation="8dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/am_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nots"
                android:lines="3" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/am_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/am_times_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout12">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Color" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/am_color_b"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"

                    android:background="#333"
                    android:tag="#333333" />

                <RadioButton
                    android:id="@+id/am_color_r"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#CA0000"


                    android:tag="#CA0000" />

                <RadioButton
                    android:id="@+id/am_color_g"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#0B8A02"

                    android:tag="#0B8A02" />

                <RadioButton
                    android:id="@+id/am_color_bl"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#0741B9"


                    android:tag="#0741B9" />

                <RadioButton
                    android:id="@+id/am_color_o"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"

                    android:background="#FF9B0E"
                    android:tag="#FF9B0E" />

                <RadioButton
                    android:id="@+id/am_color_w"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:tag="#ffffff" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/am_times_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Times"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/am_times_btn">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/days"

                />

            <LinearLayout
                android:id="@+id/l6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eee"
                android:orientation="horizontal"


                >

                <CheckBox
                    android:id="@+id/all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="all"
                    android:text="@string/all" />

                <CheckBox
                    android:id="@+id/str"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="7"
                    android:text="@string/str" />

                <CheckBox
                    android:id="@+id/sun"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="1"
                    android:text="@string/sun" />

                <CheckBox
                    android:id="@+id/mon"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="2"
                    android:text="@string/mon" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/l4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#eee"
                android:orientation="horizontal"


                >

                <CheckBox
                    android:id="@+id/tus"
                    android:layout_width="wrap_content"


                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="3"

                    android:text="@string/tus"
                    android:textSize="11sp" />

                <CheckBox
                    android:id="@+id/wen"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="4"
                    android:text="@string/wen"
                    android:textSize="11sp" />

                <CheckBox
                    android:id="@+id/thr"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="5"

                    android:text="@string/thru"
                    android:textSize="11sp" />

                <CheckBox
                    android:id="@+id/fri"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="6"
                    android:text="@string/fri"
                    android:textSize="11sp" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView13"
            style="@style/btn"
            android:onClick="gotomeoms"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

        <ImageView
            android:id="@+id/imageView8"
            style="@style/btn"
            android:onClick="save"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.912"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView13"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_save_black_24dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>